# old_saphyra

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  buildthis.sh  install.sh  push.sh  requirements.txt  setup.py  setup.sh  setup_athena.sh  setup_here.sh  setup_modules.sh  setup_saphyra.sh  setup_standalone.sh
Core/: CMakeLists.txt
Core/Root/: Backpropagation.cxx  FeedForward.cxx  LinkDef.h  NeuralNetwork.cxx  PatternRec.cxx  RProp.cxx  boost_expose.cxx  util.cxx
Core/TuningTools/: .gitignore  CMakeLists.txt  MuonPhysVal.h  RingerPhysVal.h  SkimmedNtuple_v2.h  TuningToolPyWrapper.h
Core/TuningTools/Root/: LinkDef.h  TuningToolPyWrapper.cxx
Core/TuningTools/TuningTools/neuralnetwork/: RProp.h
Core/TuningTools/neuralnetwork/: Backpropagation.h  FeedForward.h  NetConfHolder.h  NeuralNetwork.h
Core/TuningTools/python/: Neural.py  __init__.py  coreDef.py
Core/TuningTools/python/dataframe/: ReadPhysVal_v2.py  ReadSkimmedNtuple_v2.py  __init__.py
Core/TuningTools/python/keras_core/: utilities.py
Core/TuningTools/python/parsers/: CreateTuningJobFiles.py
Core/TuningTools/python/tableboard/: TableBoard.py  TableBoardParser.py  __init__.py
Core/TuningTools/scripts/standalone/: createTuningJobFiles.py  crossValStatAnalysis.py
Core/TuningTools/system/: DataHandler.h  defines.h  macros.h  ndarray.h  util.h
Core/TuningTools/training/: PatternRec.h  Standard.h  Training.h
Core/cmake/: SetupPythonPackage.cmake
Core/doc/: CreateData.ipynb
Core/keras_core/scripts/tests/: cifar10_cnn.py
Core/python/: CreateData.py  CreateTuningJobFiles.py  CrossValid.py  CrossValidStat.py  DataCurator.py  DecisionMaking.py  PreProc.py  SecPreProc.py  SubsetGenerator.py  TuningJob.py  TuningWrapper.py  __init__.py  coreDef.py  python
Core/python/dataframe/: EnumCollection.py  ReadPhysVal.py  ReadPhysVal_v2.py  ReadSafeThread.py  ReadSkimmedNtuple.py  ReadSkimmedNtuple_v2.py
Core/python/export/: CreateSelectorFiles.py  TrigMultiVarHypo_v2.py  TrigMultiVarHypo_v3.py  TrigMultiVarHypo_v4.py
Core/python/keras_core/: callbacks.py  coreDef.py
Core/python/keras_util/: callbacks.py  metrics.py  mini_batch.py
Core/python/misc/: RootLinearFit.py
Core/python/monitoring/: CrossValidStatDataCurator.py  CrossValidStatDrawer.py  MonitoringTool.py  __init__.py
Core/python/monitoring/plots/: AtlasStyle.py  PlotFunctions.py  SlidesMaker.py  TAxisFunctions.py
Core/python/parsers/: BaseModuleParser.py  Binning.py  CreateData.py  CreateTuningJobFiles.py  CrossValidStat.py  CrossValidStatMon.py  DataCuration.py  TuningJob.py  TuningToolsGrid.py  __init__.py
Core/saphyra/: CMakeLists.txt
Core/saphyra/python/: CreatePandaJobs.py  JobContext.py  PandaJob.py  PandasJob.py  __init__.py  enumerations.py
Core/saphyra/python/db/: DBConn.py  DataBase.py  init_users.py  models.py
Core/saphyra/python/db/models/: Job.py  Model.py  Task.py  User.py  __init__.py
Core/saphyra/python/metrics/: callbacks.py  metrics.py
Core/saphyra/python/posproc/: PileupFit.py  Summary.py  __init__.py
Core/saphyra/python/preproc/: Norm1.py  PrepObj.py  ShowerShapeSimpleNorm.py  TrackSimpleNorm.py  __init__.py
Core/saphyra/python/preproc/reshape/: ReshapeToConv1D.py  __init__.py
Core/saphyra/python/readers/: JobReader.py  PreProcReader.py  ReferenceReader.py  TunedDataReader.py  __init__.py
Core/saphyra/python/readers/versions/: Job_v1.py  Model_v1.py  PreProcChain_v1.py  Reference_v1.py  TunedData_v1.py  __init__.py
Core/saphyra/python/utilities/: CreatePandaJobs.py  __init__.py  helper.py
Core/saphyra/scripts/grid_scripts/: run_grid_tuning.py
Core/saphyra/scripts/standalone/: job_tuning.py
Core/saphyra/scripts/tests/: cifar10_cnn.py
Core/saphyra/scripts/validate/: validate_dataframes.py
Core/scripts/analysis_scripts/dev/Offline_MC14/: get_eff_table.py
Core/scripts/analysis_scripts/dev/Offline_MC14_binned/: createTAPSlides.py  export_offline.py
Core/scripts/analysis_scripts/dev/Offline_MC14_binned_v4/: createTAPSlides.py  export_offline.py
Core/scripts/analysis_scripts/dev/Offline_mc16_201802XX_v6/: data  export_nns.py  export_tuning.py  run_crossval.sh  run_reports.py  run_tables.py
Core/scripts/analysis_scripts/dev/Trigger_20160920_20_7_7_3/: create_data.py  create_data_using_backup.py  export_online.py
Core/scripts/analysis_scripts/dev/Trigger_20161016_20_7_7_3/: create_data.py  create_data_other_op.py  export_online.py
Core/scripts/analysis_scripts/dev/Trigger_20161214_20_7_7_3_LHbins/: create_data.py
Core/scripts/analysis_scripts/dev/Trigger_20161214_20_7_7_3_ringerBins/: create_data.py
Core/scripts/analysis_scripts/dev/Trigger_20180220_mc16d_jpsi_v1/: create_data.py  create_tuningFiles.py  data  export_online.py  run_crossval.sh  run_grid_tuning.sh  run_tuning.py
Core/scripts/athena/: gen-recotf-src.py
Core/scripts/grid_scripts/: add_container.sh  createGRIDTuningJobFiles.py  crossValStatGRIDAnalysis.py  fileMergingGRID.py  full2SlimGRID.py  genGRIDdata.py  retryBSUBtuning.py  runBSUBtuning.py  runBSUBtuning.sh  runGRIDtuning.py  run_dump.py  toUniqueDS.py
Core/scripts/jenkins/: run_tests.sh
Core/scripts/jenkins/samples/: download.sh
Core/scripts/jenkins/tests/: citest0.py  citest1.py  citest2.py  citest3.sh  citest4.sh  citest5.sh  citest6.sh
Core/scripts/run_on_grid/: BSUB_tuningJob.py  bsub_script.sh  gridCreateData.py
Core/scripts/skeletons/: create_crossvalid.py  create_data.py  create_tuningfiles.py  datacurator.py  dump_eff.py  dump_eff_rpnorm.py  export_online.py  run_all.sh  run_grid_example.sh  run_tuning.py
Core/scripts/standalone/: createData.py  crossValStatMonAnalysis.py  exportPDFs.py  exportTree2Numpy.py  fileJuicer.py  fileMerging.py  filterTree.py  fixTDArchieveNumpyOrder.py  full2Slim.py  haddp.py  npProj2TTProj.py  ppMatProj2TTProj.py  runExpertTuning.py  runTuning.py  run_popen_jobs.py  toMatlab.py
Core/scripts/validate/: core_test.py  crossval_revert_test.py  measure_time.py  memory_test.py  time_test.py
Core/src/: LinkDef.h  Standard.cxx
ci/: basic_SP_train_test.py  import_test.py  main.py
(+300 files in other folders)
